CSS fix for limiting pointer-events to project items inside the lists to avoid UI flickering

--- a/Udemy Understanding TypeScript/exercise_files/Section_09/prj-00-initial-starting-setup/app.css
+++ b/Udemy Understanding TypeScript/exercise_files/Section_09/prj-00-initial-starting-setup/app.css
@@ -88,10 +88,15 @@ button:active {
 }
 
 .projects li {
+	background: white;
 	box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.26);
 	padding: 1rem;
 	margin: 1rem;
-	background: white;
+}
+
+/* Avoids flickering */
+.projects li > * {
+	pointer-events: none;
 }
 
 .projects li h2 {
